# ctprint

./: LICENSE.txt  example.py  help_message.py  pyproject.toml  readme.md  tcprint.py
ctprint/ctprint/: __init__.py  ctprint.py  help_message.py
ctprint/tests/: test_ctprint.py  test_help_message.py
lib/: tcprint.py
